--- a/index.html
+++ b/index.html
@@ -2,13 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>YourSite — Your Tagline</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Elite Sportswear | Performance & Style</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Welcome to My Website!</h1>
-  <p>This is your new site built with HTML, CSS, and JavaScript.</p>
+  <header>
+    <h1>Elite Sportswear</h1>
+    <p>Performance gear built for every athlete</p>
+  </header>
+
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Shop</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <section id="hero">
+    <h2>Train Hard. Play Hard. Look Good.</h2>
+    <p>Discover our latest collection of sportswear designed to help you perform at your best — on and off the field.</p>
+    <button>Shop Now</button>
+  </section>
+
+  <section id="products">
+    <h2>Our Featured Gear</h2>
+    <div class="product">
+      <img src="https://via.placeholder.com/250x250" alt="Sports Hoodie">
+      <h3>Performance Hoodie</h3>
+      <p>Breathable, stretch-fit fabric built for all-day comfort.</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/250x250" alt="Training Shorts">
+      <h3>Training Shorts</h3>
+      <p>Lightweight design with moisture-wicking technology.</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/250x250" alt="Running Shoes">
+      <h3>Running Shoes</h3>
+      <p>Engineered cushioning for peak performance and comfort.</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Elite Sportswear. All rights reserved.</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
