--- a/index.html
+++ b/index.html
@@ -3,51 +3,63 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Elite Sportswear | Performance & Style</title>
+  <title>CMT Sportswear | Strength in Motion</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>Elite Sportswear</h1>
-    <p>Performance gear built for every athlete</p>
+    <img src="https://via.placeholder.com/150x50?text=CMT+Logo" alt="CMT Sportswear logo" class="logo">
+    <h1>CMT Sportswear</h1>
+    <p>Strength in Motion — Gear Built for Performance</p>
   </header>
 
   <nav>
     <a href="#">Home</a>
-    <a href="#">Shop</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
+    <a href="#about">About</a>
+    <a href="#products">Products</a>
+    <a href="#contact">Contact</a>
   </nav>
 
   <section id="hero">
-    <h2>Train Hard. Play Hard. Look Good.</h2>
-    <p>Discover our latest collection of sportswear designed to help you perform at your best — on and off the field.</p>
-    <button>Shop Now</button>
+    <h2>Train Hard. Move Fast. Stay Strong.</h2>
+    <p>Premium sportswear designed for athletes who never quit.</p>
+    <button>Shop the Collection</button>
+  </section>
+
+  <section id="about">
+    <h2>About CMT Sportswear</h2>
+    <p>Founded in 2025, CMT Sportswear was built for those who push limits. Our apparel blends performance materials with modern style — built to handle the grind and look good doing it.</p>
   </section>
 
   <section id="products">
-    <h2>Our Featured Gear</h2>
+    <h2>Featured Gear</h2>
     <div class="product">
-      <img src="https://via.placeholder.com/250x250" alt="Sports Hoodie">
+      <img src="https://via.placeholder.com/250x250?text=Hoodie" alt="Performance Hoodie">
       <h3>Performance Hoodie</h3>
-      <p>Breathable, stretch-fit fabric built for all-day comfort.</p>
+      <p>Soft, sweat-wicking fabric for everyday training and comfort.</p>
     </div>
 
     <div class="product">
-      <img src="https://via.placeholder.com/250x250" alt="Training Shorts">
+      <img src="https://via.placeholder.com/250x250?text=Shorts" alt="Training Shorts">
       <h3>Training Shorts</h3>
-      <p>Lightweight design with moisture-wicking technology.</p>
+      <p>Lightweight stretch design with quick-dry technology.</p>
     </div>
 
     <div class="product">
-      <img src="https://via.placeholder.com/250x250" alt="Running Shoes">
+      <img src="https://via.placeholder.com/250x250?text=Shoes" alt="Running Shoes">
       <h3>Running Shoes</h3>
-      <p>Engineered cushioning for peak performance and comfort.</p>
+      <p>Engineered cushioning for explosive performance and recovery.</p>
     </div>
   </section>
 
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:info@cmtsportswear.com">info@cmtsportswear.com</a></p>
+    <p>Follow us on Instagram: <a href="https://instagram.com/" target="_blank">@CMTsportswear</a></p>
+  </section>
+
   <footer>
-    <p>© 2025 Elite Sportswear. All rights reserved.</p>
+    <p>© 2025 CMT Sportswear. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
